--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "generic-pool": "^3.7.1",
+    "lightship": "^6.1.0",
     "puppeteer": "^2.1.1",
     "rc": "^1.2.8",
     "serve-static": "^1.14.1",
