--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "body-parser": "^1.19.0",
+    "chokidar": "^3.3.1",
     "connect-mount": "^1.0.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
@@ -10,6 +11,7 @@
     "puppeteer": "^2.1.1",
     "rc": "^1.2.8",
     "serve-static": "^1.14.1",
+    "tiny-lr": "^1.1.1",
     "vue": "^2.6.11",
     "vue-server-renderer": "^2.6.11",
     "vue-stash": "^2.0.1-beta",
@@ -17,15 +19,14 @@
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
+  "bin": "./src/service.js",
   "name": "@molgenis/vue-pdfium",
   "description": "Vue PDF rendering service",
   "version": "1.0.0",
   "main": "src/service.js",
   "devDependencies": {
-    "chokidar": "^3.3.1",
     "eslint": "^6.8.0",
-    "eslint-plugin-sort-class-members": "^1.6.0",
-    "tiny-lr": "^1.1.1"
+    "eslint-plugin-sort-class-members": "^1.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
